--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div id="divPBPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divPBPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanPBPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div id="divPBXHText" class="spanFWLXOut SRK" style="width: 200px;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
+                        <div id="divPBXHSpan" class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
                             <span id="spanPBXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK" style="display: none;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -168,19 +168,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
