--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divCKCFTDCWLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCKCFTDCWLXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCKCFTDCWLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -119,7 +119,8 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -127,7 +128,7 @@
                         </div>
                     </div>
                     <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divSQSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择商圈</span>
                             <div class="divFWQKArrow"></div>
                         </div>
