--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
@@ -160,7 +160,7 @@
                         <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 124px" />
                     </span>
                     <div id="divZJDWText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divZJDWSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/㎡/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
