--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -113,7 +113,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divSPLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divSPLXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanSPLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -141,7 +141,8 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -149,7 +150,7 @@
                         </div>
                     </div>
                     <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divSQSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择商圈</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -181,7 +182,7 @@
                         <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 124px" />
                     </span>
                     <div id="divZJDWText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divZJDWSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
