--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXZLLXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXZLLXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXZLLX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类型</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divKZCGSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divKZCGSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanKZCGS" class="spanFWQK spanFontColor" style="margin-top: 0">否</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -147,7 +147,8 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -155,7 +156,7 @@
                         </div>
                     </div>
                     <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divSQSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择商圈</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -187,7 +188,7 @@
                         <input id="ZJ" maxlength="9" column="ZJ" class="inputLCFB spanFontColor" type="text" style="width: 124px" />
                     </span>
                     <div id="divZJDWText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divZJDWSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="spanFWQK spanFontColor" style="margin-top: 0">元/天</span>
                             <div class="divFWQKArrow"></div>
                         </div>
