--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_PBDN/ES_SJSM_PBDN.cshtml
@@ -108,6 +108,7 @@
                     </div>
                     <div id="divPBPPText" class="spanFWLXOut SRK" style="position: relative;">
                         <div id="divPBPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="PPID"/>
                             <span id="spanPBPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
