--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
@@ -123,31 +123,57 @@
                     </div>
                 </div>
             </div>
-            <div id="divGCCPP" class="divFWCZ" style="z-index: 998; display: none">
-                <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">品牌</span>
-                </div>
-                <div class="divRight">
-                    <div id="divPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
-                            <div class="divFWQKArrow"></div>
+        <div id="divGCCPP" class="divFWCZ" style="z-index: 998; display: none">
+            <div class="divLeft" style="margin-left: 128px;">
+                <span class="required">*</span>
+                <span class="spanFWCZ">品牌</span>
+            </div>
+            <div class="divRight">
+                <div id="divPPText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <span id="spanPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
+                        <div class="divFWQKArrow"></div>
+                    </div>
+                    <div id="divPP" class="div_xzk" style="display: none;">
+                        <div class="div_xzk_head">
+                            <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
+                            <input class="btn btn-info" type="button" value="快速搜索"/>
                         </div>
-                        <div id="divPP" class="div_xzk" style="display: none;">
-                            <div class="div_xzk_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
+                        <div class="div_xzk_body">
+                            <div class="div_content_yxmc" id="div_content_yxmc">
                             </div>
-                            <div class="div_xzk_body">
-                                <div class="div_content_yxmc" id="div_content_yxmc">
-                                </div>
-                                <div class="div_content_yxbq" id="div_content_yxbq">
-                                </div>
+                            <div class="div_content_yxbq" id="div_content_yxbq">
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="divDW" class="divFWCZ" style="z-index: 995;">
+            <div class="divLeft" style="margin-left: 128px;">
+                <span class="required">*</span>
+                <span class="spanFWCZ">吨位</span>
+            </div>
+            <div class="divRight">
+                <span id="spanDW" class="spanFWLX SRK" style="display: inline-block;">
+                    <input class="inputLCFB spanFontColor" id="DW" maxlength="9" column="DW" type="text" style="width: 100px" />
+                    <span class="spanFontColor" style="margin-left: 15px;">吨</span>
+                </span>
+            </div>
+            <div id="divDWTip" class="Warn" style="z-index: 994; position: relative;"></div>
+        </div>
+            <div id="divXSS" class="divFWCZ" style="z-index: 995;">
+                <div class="divLeft" style="margin-left: 114px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">小时数</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanXSS" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="XSS" maxlength="9" column="XSS" type="text" style="width: 100px" />
+                        <span class="spanFontColor">小时</span>
+                    </span>
+                </div>
+                <div id="divXSSTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
             <div id="divGCCCCNX" class="divFWCZ" style="z-index: 997;">
                 <div class="divLeft" style="margin-left: 101px;">
