--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -138,7 +138,7 @@ li {
     font-size: 18px;
     margin-bottom: 5px;
     line-height: 40px;
-    color: #cccccc;
+    color: #333333;
 }
 
 .emstep {
