--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_KC/CL_KC.cshtml
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="divCXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; display: none; position: relative;">
+                    <div id="divCXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 998; display: none; position: relative;">
                         <div id="divCXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择车系</span>
                             <div class="divFWQKArrow"></div>
@@ -117,54 +117,138 @@
                     </div>
                 </div>
             </div>
-            <div id="divCLYS" class="divFWCZ" style="z-index: 998">
+            <div id="divCLYS" class="divFWCZ" style="z-index: 997">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">车辆颜色</span>
                 </div>
+                <div class="divRight" id="div_clys_right">
+
+                </div>
+            </div>
+            <div id="divCLYS2" class="divFWCZ" style="z-index: 997">
+                <div class="divLeft" style="margin-left: 177px;">
+                    <span class="spanFWCZ">&nbsp;</span>
+                </div>
+                <div class="divRight" id="div_clys_right2">
+
+                </div>
+            </div>
+            <div id="divSCSPSJ" class="divFWCZ" style="z-index: 996;">
+                <div class="divLeft" style="margin-left: 72px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">首次上牌时间</span>
+                </div>
                 <div class="divRight">
-                    <div class="div_clys">
-                        <span class="span_clys_left"></span>
-                        <span class="span_clys_right">黑</span>
+                    <div id="divSPNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divSPNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanSPNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择上牌年份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divSPNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divSPYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divSPYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanSPYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择上牌月份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divSPYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="divKCCCNX" class="divFWCZ" style="z-index: 997;">
-                <div class="divLeft" style="margin-left: 101px;">
+            <div id="divSFDQBY" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 56px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">出厂年限</span>
+                    <span class="spanFWCZ">是否定期4S保养</span>
                 </div>
                 <div class="divRight">
-                    <div id="divCCNXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divCCNXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanCCNX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择出厂年限</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divCCNX" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
+                    <img class="iFWCZ" id="imgS" /><label class="labelFWCZ">&nbsp;&nbsp;是</label>
+                    <img class="iFWCZ" id="imgF" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
+                </div>
+            </div>
+        <div id="divYWZDSG" class="divFWCZ">
+            <div class="divLeft" style="margin-left: 72px;">
+                <span class="required">*</span>
+                <span class="spanFWCZ">有无重大事故</span>
+            </div>
+            <div class="divRight">
+                <img class="iFWCZ" id="imgY"/><label class="labelFWCZ">&nbsp;&nbsp;有</label>
+                <img class="iFWCZ" id="imgW"/><label class="labelFWCZ">&nbsp;&nbsp;无&nbsp;&nbsp;</label>
+            </div>
+        </div>
+        <div id="divNJDQ" class="divFWCZ" style="z-index: 997;">
+            <div class="divLeft" style="margin-left: 101px;">
+                <span class="required">*</span>
+                <span class="spanFWCZ">年检到期</span>
+            </div>
+            <div class="divRight">
+                <div id="divNJDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <span id="spanNJDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
+                        <div class="divFWQKArrow"></div>
                     </div>
-                    <div id="divCCYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divCCYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanCCYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择出厂月份</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divCCYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
+                    <div id="divNJDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divNJDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <span id="spanNJDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
+                        <div class="divFWQKArrow"></div>
+                    </div>
+                    <div id="divNJDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
             </div>
-            <div id="divEDZZ" class="divFWCZ" style="z-index: 995;">
-                <div class="divLeft" style="margin-left: 101px;">
+        </div>
+        <div id="divJQXDQ" class="divFWCZ" style="z-index: 997;">
+            <div class="divLeft" style="margin-left: 86px;">
+                <span class="required">*</span>
+                <span class="spanFWCZ">交强险到期</span>
+            </div>
+            <div class="divRight">
+                <div id="divJQXDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <span id="spanJQXDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
+                        <div class="divFWQKArrow"></div>
+                    </div>
+                    <div id="divJQXDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divJQXDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <span id="spanJQXDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
+                        <div class="divFWQKArrow"></div>
+                    </div>
+                    <div id="divJQXDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div id="divSYXDQ" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">额定载重</span>
+                    <span class="spanFWCZ">商业险到期</span>
                 </div>
                 <div class="divRight">
-                    <span id="spanEDZZ" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="EDZZ" maxlength="9" column="EDZZ" type="text" style="width: 118px" />
-                        <span class="spanFontColor">吨</span>
-                    </span>
+                    <div id="divSYXDQNFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divSYXDQNFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanSYXDQNF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期年份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divSYXDQNF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divSYXDQYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divSYXDQYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanSYXDQYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择到期月份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divSYXDQYF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
                 </div>
-                <div id="divEDZZTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
             <div id="divXSLC" class="divFWCZ" style="z-index: 995;">
                 <div class="divLeft" style="margin-left: 101px;">
