--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWYPSP/CW_CWYPSP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWYPSP/CW_CWYPSP.cshtml
@@ -100,7 +100,7 @@
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
                         <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
+                            <input type="hidden" id="LBID"/>
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -117,10 +117,27 @@
                     </div>
                 </div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 992;">
-                <div class="divLeft" style="margin-left: 102px;">
+            <div id="divXJCD" class="divFWCZ" style="z-index: 998;">
+                <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">转让价格</span>
+                    <span class="spanFWCZ">新旧</span>
+                </div>
+                <div class="divRight">
+                    <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+                <div id="divXJTip" class="Warn" style="z-index: 998; position: relative;"></div>
+            </div>
+            <div id="divJG" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">价格</span>
                 </div>
                 <div class="divRight">
                     <span id="spanJG" class="spanFWLX SRK" style="display: inline-block;">
@@ -128,32 +145,7 @@
                         <span class="spanFontColor">元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
-            </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
-                <div class="divLeft" style="margin-left: 102px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">交易地点</span>
-                </div>
-                <div class="divRight">
-                    <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
-                            <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
+                <div id="divJGTip" class="Warn" style="z-index: 997; position: relative;"></div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">详细信息</span>
