--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -82,7 +82,19 @@
                 <span class="spanSplit">基本信息</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divKCPP" class="divFWCZ" style="z-index: 998">
+            <div id="divCJH" class="divFWCZ" style="z-index: 991;">
+                <div class="divLeft" style="margin-left: 114px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ">车架号</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanCJH" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="CJH" maxlength="17" column="CJH" type="text" style="width: 145px" />
+                    </span>
+                </div>
+                <div id="divCJHTip" class="Warn" style="z-index: 990; position: relative;"></div>
+            </div>
+            <div id="divKCPP" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">品牌</span>
@@ -117,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCLYS" class="divFWCZ" style="z-index: 997">
+            <div id="divCLYS" class="divFWCZ" style="z-index: 998">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">车辆颜色</span>
@@ -158,7 +170,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divSFDQBY" class="divFWCZ">
+            <div id="divSFDQBY" class="divFWCZ" style="z-index: 995;">
                 <div class="divLeft" style="margin-left: 56px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">是否定期4S保养</span>
@@ -168,17 +180,48 @@
                     <img class="iFWCZ" id="imgF" /><label class="labelFWCZ">&nbsp;&nbsp;否&nbsp;&nbsp;</label>
                 </div>
             </div>
-            <div id="divYWZDSG" class="divFWCZ">
-                <div class="divLeft" style="margin-left: 72px;">
+            <div id="divPZSZD" class="divFWCZ" style="z-index: 994;">
+                <div class="divLeft" style="margin-left: 87px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">有无重大事故</span>
+                    <span class="spanFWCZ">牌照所在地</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgY" /><label class="labelFWCZ">&nbsp;&nbsp;有</label>
-                    <img class="iFWCZ" id="imgW" /><label class="labelFWCZ">&nbsp;&nbsp;无&nbsp;&nbsp;</label>
+                    <div id="divPZSZSFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divPZSZSFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="SPSF"/>
+                            <span id="spanPZSZSF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择上牌省份</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divPZSZSF" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divPZSZCSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divPZSZCSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanPZSZCS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择上牌城市</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divPZSZCS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="divNJDQ" class="divFWCZ" style="z-index: 995;">
+            <div id="divCLGHCS" class="divFWCZ" style="z-index: 993;">
+                <div class="divLeft" style="margin-left: 101px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">过户次数</span>
+                </div>
+                <div class="divRight">
+                    <div id="divGHCSText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divGHCSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanGHCS" class="spanFWQK spanFontColor" style="margin-top: 0">过户次数</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divGHCS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divNJDQ" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">年检到期</span>
@@ -202,7 +245,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divJQXDQ" class="divFWCZ" style="z-index: 994;">
+            <div id="divJQXDQ" class="divFWCZ" style="z-index: 991;">
                 <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交强险到期</span>
@@ -226,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divSYXDQ" class="divFWCZ" style="z-index: 993;">
+            <div id="divSYXDQ" class="divFWCZ" style="z-index: 990;">
                 <div class="divLeft" style="margin-left: 86px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">商业险到期</span>
@@ -250,7 +293,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divXSLC" class="divFWCZ" style="z-index: 992;">
+            <div id="divXSLC" class="divFWCZ" style="z-index: 989;">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">行驶里程</span>
@@ -263,7 +306,7 @@
                 </div>
                 <div id="divXSLCTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 991;">
+            <div id="divJG" class="divFWCZ" style="z-index: 988;">
                 <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
