--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_DYP/PWKQ_DYP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_DYP/PWKQ_DYP.cshtml
@@ -11,11 +11,13 @@
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/PWKQ/PWKQ_DYP.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/PWKQ/PWKQ_DYP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/PWKQ/PWKQ_DYPYZ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Public_TP.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery.ui.datepicker-zh-CN.js")"></script>
 </head>
 <body>
     <div>
@@ -88,52 +90,42 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;转让</label>
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;求购&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgZR" /><label class="labelFWCZ">&nbsp;&nbsp;转让</label>
+                    <img class="iFWCZ" id="imgQG" /><label class="labelFWCZ">&nbsp;&nbsp;求购&nbsp;&nbsp;</label>
                 </div>
             </div>
-            <div id="divJDLB" class="divFWCZ" style="z-index: 999">
+            <div id="divKQLB" class="divFWCZ">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="divRight">
-                    <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divXLText" class="spanFWLXOut SRK">
-                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
+                    <img class="iFWCZ" id="imgDHQ" /><label class="labelFWCZ">&nbsp;&nbsp;兑换券</label>
+                    <img class="iFWCZ" id="imgDYK"/><label class="labelFWCZ">&nbsp;&nbsp;电影卡&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgDZQ" /><label class="labelFWCZ">&nbsp;&nbsp;电子券/团购券&nbsp;&nbsp;</label>
                 </div>
             </div>
-            <div id="divXJCD" class="divFWCZ" style="z-index: 993;">
+            <div id="divYY" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">新旧</span>
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ">影院</span>
                 </div>
                 <div class="divRight">
-                    <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
+                    <input id="YY" column="YY" class="spanFWLX inputLXRXX SRK" type="text" style="width: 305px" />
+                </div>
+                <div id="divYYTip" class="Warn" style="z-index: 992; position: relative;"></div>
+            </div>
+            <div id="divYXQZ" class="divFWCZ" style="z-index: 994">
+                <div class="divLeft" style="margin-left: 100px;">
+                    <span class="required">*</span>
+                    <span id="spanYXQZ">有效期至</span>
+                </div>
+                <div class="divRight">
+                    <input id="YXQZ" readonly="readonly" class="spanFWLX inputLXRXX SRK" type="text" style="width: 305px" />
                 </div>
             </div>
             <div id="divJG" class="divFWCZ" style="z-index: 992;">
-                <div class="divLeft" style="margin-left: 102px;">
+                <div class="divLeft" style="margin-left: 100px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
                 </div>
@@ -146,7 +138,7 @@
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
-                <div class="divLeft" style="margin-left: 102px;">
+                <div class="divLeft" style="margin-left: 100px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
@@ -184,7 +176,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divFYMS" class="divFWCZ" style="height: 253px;">
+            <div id="divFYMS" class="divFWCZ" style="height: 132px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
                     <span id="spanFYMS" style="vertical-align: top">补充描述</span>
@@ -193,39 +185,6 @@
                     <script id="FYMS" type="text/plain" style="width:594px;height:200px;display:inline-block;">
                     </script>
                     <div id="divFYMSTip" class="Warn"></div>
-                </div>
-            </div>
-            <div id="divFWZP" class="divFWCZ">
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required" style="vertical-align: top">*</span>
-                    <span id="spanFWZP" style="vertical-align: top">上传照片</span>
-                </div>
-                <div class="divRight">
-                    <div id="divUploadOut" class="divUploadOut">
-                        <form action="" enctype="multipart/form-data" id="myform" method="post">
-                            <input id="inputUpload" unselectable="on" type="file" multiple="multiple" class="file" />
-                        </form>
-                    </div>
-                    <div style="margin-left: 214px; font-size: 14px; color: #999999;">
-                        <span>最多8张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
-                    </div>
-                    <div id="divFWZPTip" style="margin-top: 10px; margin-left: 210px;"></div>
-                </div>
-            </div>
-            <div id="divFWZPValue" class="divFWCZ" style="display: none; text-align: left; margin-top: 140px;">
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required"></span>
-                    <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
-                </div>
-                <div id="divImgs1" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs1" class="ulImgs" style="padding-left: 0px;"></ul>
-                </div>
-                <div class="divLeft" style="height: 170px; vertical-align: top;">
-                    <span class="required"></span>
-                    <span id="spanFWZP" style="width: 56px; display: inline-block;"></span>
-                </div>
-                <div id="divImgs2" class="divRight" style="display: inline-block; width: 670px;">
-                    <ul id="ulImgs2" class="ulImgs" style="padding-left: 0px;"></ul>
                 </div>
             </div>
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
