--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -163,12 +163,12 @@ li {
 }
 
 .spanFontColor {
-    color: #999999;
-}
-
-.spanFontColor:focus {
     color: #333333;
 }
+
+/*.spanFontColor:focus {
+    color: #333333;
+}*/
 
 .inputLCFB {
     margin-top: 1px; 
