--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_CY/ZSJM_CY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_CY/ZSJM_CY.cshtml
@@ -83,18 +83,18 @@
                 <span class="spanSplit">基本信息</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divZSJM_CYLB" class="divFWCZ" style="z-index: 999;">
+            <div id="divCYLB" class="divFWCZ" style="z-index: 999;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="divRight">
-                    <div id="divCYLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divCYLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanCYLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
+                    <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divCYLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <span id="spanPPMC">品牌名称</span>
                 </div>
                 <div class="divRight">
-                    <input id="PPMC" maxlength="50" column="PPMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光" />
+                    <input id="PPMC" maxlength="50" column="PPMC" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光" />
                     <div id="divPPMCTip"></div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                     <span id="spanBT">标题</span>
                 </div>
                 <div class="divRight">
-                    <input id="BT" maxlength="50" column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                    <input id="BT" maxlength="50" column="BT" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                     <div id="divBTTip"></div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 <span id="spanPPMS">品牌描述</span>
             </div>
             <div class="divRight">
-                <input id="PPMS" maxlength="50" column="PPMS" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="用于列表展示，可填写加盟品牌的特点和优势，不超过30字"/>
+                <input id="PPMS" maxlength="50" column="PPMS" class="spanFWLX SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="用于列表展示，可填写加盟品牌的特点和优势，不超过30字"/>
                 <div id="divPPMSTip"></div>
             </div>
         </div>
@@ -260,32 +260,6 @@
             <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
                 <span class="spanSplit">联系人信息</span>
                 <em class="emSplit"></em>
-            </div>
-            <div id="divXXDZ" class="divFWCZ" style="z-index: 991;">
-                <div class="divLeft" style="margin-left: 100px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">详细地址</span>
-                </div>
-                <div class="divRight">
-                    <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
-                            <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <input id="JTDZ" column="JTDZ" class="spanFWLX inputLXRXX SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
-                </div>
             </div>
             <div id="divLXR" class="divFWCZ" style="z-index: 990">
                 <div class="divLeft" style="margin-left: 114px;">
