--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZSJM/ZSJM_CY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ZSJM/ZSJM_CY.css
@@ -210,7 +210,7 @@
 .inputLXRXX {
     width: 472px;
     padding: 6px 12px;
-    color: #999999;
+    color: #333333;
 }
 
 .SRK:focus {
@@ -499,7 +499,7 @@
     cursor: pointer;
 }
 
-:-ms-input-placeholder.input_dtss {
+:-ms-input-placeholder {
     color: #999;
 }
 
