--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_FZBL/PFCG_FZBL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_FZBL/PFCG_FZBL.cshtml
@@ -92,52 +92,19 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divLPLB" class="divFWCZ" style="z-index: 999">
+            <div id="divFZBLLB" class="divFWCZ" style="z-index: 996;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">类别</span>
+                    <span id="spanFZBLLB">类别</span>
                 </div>
-                <div class="divRight">
-                    <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
-                            <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divXLText" class="spanFWLXOut SRK" style="display: none">
-                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divJFFS" class="divFWCZ" style="z-index: 998; display: none;">
-                <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">方式</span>
-                </div>
-                <div class="divRight">
-                    <div id="divFSText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div id="divFSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanFS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择方式</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divFS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
+                <div id="divFZBLLBText" class="divRight" style="position: relative; ">
                 </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">特色描述</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divFYMS" class="divFWCZ" style="height: 253px; position: relative; z-index: 997;">
+            <div id="divFYMS" class="divFWCZ" style="height: 253px;">
                 <div class="divLeft" style="height: 170px; vertical-align: top;">
                     <span class="required" style="vertical-align: top">*</span>
                     <span id="spanFYMS" style="vertical-align: top">服务介绍</span>
