--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PFCG/PFCG_BZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PFCG/PFCG_BZ.css
@@ -150,7 +150,7 @@
     font-family: "宋体", "SimSun";
 }
 
-.liFWPZ {
+.liBZLB,.liBZYT  {
     display: inline-block;
     width: 120px;
     height: 30px;
